# lcloud

./: .gitignore  .gitmodules  build.gradle  license.header.java  license.header.txt  settings.gradle
.github/workflows/: cmake-multi-platform.yml  cpp-main.yml  gradle-publish.yml  main.yml
.run/: Coverage Test.run.xml  ExampleService AAA.run.xml  ExampleService BBB.run.xml  Rebuld Jar.run.xml  SqlDiscoveryExample AAA.run.xml  SqlDiscoveryExample BBB.run.xml  db.sh.run.xml  postgres.sh.run.xml
docs/: BUILD.md  DEV.md  MINDMAP.md  README.md
docs/diagrams/: copyright.iuml  main_goal.puml  styling.iuml  tech.puml
lcloud-common/: .gitignore  build.gradle  jreleaser.yml
lcloud-common/src/main/java/org/mtbo/lcloud/logging/: FileLineLogger.java
lcloud-discovery-example/: Dockerfile  README.md  build.gradle
lcloud-discovery-example/discovery-example/: Chart.yaml  values.yaml
lcloud-discovery-example/discovery-example/templates/: _helpers.tpl  deployment.yaml  postgres-configmap.yaml  postgres-deployment.yaml  serviceaccount.yaml
lcloud-discovery-example/src/main/java/: MulticastDiscoveryExample.java  SqlDiscoveryExample.java
lcloud-sql-discovery/: build.gradle  jreleaser.yml
lcloud-sql-discovery-cpp/: .clang-format  CMakeLists.txt  Dockerfile
lcloud-sql-discovery-cpp/cmake/Modules/: CodeCoverage.cmake
lcloud-sql-discovery-cpp/discovery-cpp/: Chart.yaml  values.yaml
lcloud-sql-discovery-cpp/discovery-cpp/templates/: _helpers.tpl  deployment.yaml  postgres-configmap.yaml  postgres-deployment.yaml  postgres-service.yaml  serviceaccount.yaml
lcloud-sql-discovery-cpp/example/: CMakeLists.txt  main.cpp
lcloud-sql-discovery-cpp/src/: discovery.cpp  discovery.h
lcloud-sql-discovery-cpp/src/repo/: database.cpp  database.h  instances.cpp  instances.h
lcloud-sql-discovery-cpp/test/: CMakeLists.txt  lcloud-sql-test.cpp
lcloud-sql-discovery/sql/: h2.sh  my-postgres.conf  postgres.sh
lcloud-sql-discovery/sql/h2-data/: default.mv.db
lcloud-sql-discovery/src/main/java/org/mtbo/lcloud/discovery/sql/: AutoDisposable.java  Instances.java  SqlDiscovery.java
lcloud-sql-discovery/src/main/java/org/mtbo/lcloud/discovery/sql/logging/: FileLineLogger.java
lcloud-sql-discovery/src/main/resources/: application.properties  logging.properties
lcloud-sql-discovery/src/test/java/: SqlDiscoveryTest.java
lcloud-udp-discovery/: build.gradle  jreleaser.yml
lcloud-udp-discovery-example/: Dockerfile  README.md  build.gradle
lcloud-udp-discovery-example/src/main/java/: ExampleService.java  SqlDiscoveryExample.java  UdpDiscoveryExample.java
lcloud-udp-discovery-example/src/main/resources/: logging.properties
lcloud-udp-discovery-example/udp-discovery-example/: Chart.yaml  values.yaml
lcloud-udp-discovery-example/udp-discovery-example/templates/: _helpers.tpl  cronjob.yaml  deployment.yaml  serviceaccount.yaml
lcloud-udp-discovery/src/main/java/org/mtbo/lcloud/discovery/: AddressSocket.java  ClientConfig.java  Connection.java  DiscoveryClient.java  DiscoveryService.java  Listener.java  Packet.java  PacketProcessor.java  PacketSource.java  Sender.java  ServiceConfig.java
lcloud-udp-discovery/src/main/java/org/mtbo/lcloud/discovery/exceptions/: NetworkException.java
lcloud-udp-discovery/src/main/java/org/mtbo/lcloud/discovery/logging/: FileLineLogger.java
lcloud-udp-discovery/src/main/java/org/mtbo/lcloud/discovery/multicast/: MulticastDiscovery.java  MulticastPublisher.java
lcloud-udp-discovery/src/main/java/org/mtbo/lcloud/discovery/udp/: DiscoveryClient.java  DiscoveryService.java  UdpClientConfig.java  UdpConnection.java  UdpDiscoveryClient.java  UdpDiscoveryService.java  UdpPacket.java  UdpServiceConfig.java
lcloud-udp-discovery/src/test/java/: DiscoveryClientTest.java  DiscoveryServiceTest.java  MockClient.java  MockClientFailOnClose.java  MockClientFailOnReceive.java  MockClientFailOnSend.java  MockLogging.java  MockSocket.java  ProtectedClient.java
lcloud-udp-discovery/src/test/resources/: logging.properties
